# Apprendo_Project

./: .coveragerc  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  initial_data.json  manage.py  pyproject.toml  register_user.py
config/: celery.py  settings.py  urls.py
coverage_report/: coverage_report.txt
lms/: admin.py  filters.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/fixtures/: lessons_courses.json
lms/migrations/: 0001_initial.py  0002_alter_course_options_alter_lesson_options_and_more.py  0002_course_owner_course_price_lesson_owner_subscription.py  0002_course_owner_lesson_owner.py  0003_alter_course_owner_alter_lesson_owner.py  0003_alter_studentanswer_is_approved.py  0004_answer_correct_answer.py  0004_remove_course_preview_course_status.py  0004_subscription.py  0005_course_price.py  0005_lesson_status.py  0005_question_correct_answer.py  0006_question_answer_test_question_test.py  0007_question_owner.py  0008_alter_question_question_type_alter_question_text.py  0009_answer_owner_alter_answer_text.py  0010_alter_answer_options_alter_course_options_and_more.py  0011_test_status.py  0012_studentanswer_is_approved.py
lms/tests/: test_course_tests.py  test_courses.py  test_lessons.py  test_pagination.py  test_subscriptions.py  test_tests.py  test_validators.py
mesdevoirs24/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
users/fixtures/: payments.json  users.json
users/management/commands/: create_moderator_group.py  create_roles.py  create_test_users.py  createdata.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_date_joined_user_first_name_and_more.py  0002_payment.py  0003_alter_user_options_user_date_joined_user_first_name_and_more.py  0004_payment_stripe_payment_url_payment_stripe_session_id.py  0005_alter_payment_stripe_session_id.py  0006_alter_payment_stripe_session_id.py  0007_alter_payment_stripe_payment_url_and_more.py  0008_alter_payment_stripe_payment_url.py  0009_alter_payment_payment_date.py
