[tool.poetry]
name = "Apprendo_Project"
version = "0.1.0"
description = "self-learning platform"
authors = ["Annabse27 <annabse27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
python-decouple = "^3.8"
psycopg2 = "^2.9.9"
djangorestframework-simplejwt = "^5.3.1"
requests = "^2.32.3"
drf-spectacular = "^0.27.2"
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.1.1"
django-celery-beat = "^2.7.0"
python-dotenv = "^1.0.1"
kombu = "^5.4.2"
flake8 = "^7.1.1"
autopep8 = "^2.3.1"
django-nested-admin = "^4.1.1"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
stripe = "^11.2.0"
pytest-cov = "^6.0.0"
pillow = "^11.0.0"
django-cors-headers = "^4.6.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
